# RASDR

./: .gitignore  .gitmodules  AUTHORS  CNAME  COPYING  README.md  faq.html  index.html  style.css
CYUSB3KIT/: README.md
CYUSB3KIT/ssek_emu/: .cproject  .project  cyfx_app.c  cyfx_app.h  cyfx_dscr.c  cyfx_gcc_startup.S  cyfxbulkdscr.c  cyfxbulksrcsink.c  cyfxbulksrcsink.h  cyfxtx.c  error-codes.txt  fx3.ld  makefile  readme.txt
CYUSB3KIT/streamer/: Streamer.h  Streamer.sln  Streamer.vcproj  Streamer.vcxproj
DigiRED/: README.md
DigiRED/driver/: README.md
DigiRED/firmware/: README.md
DigiRED/hardware/: COPYING  README.md  digired-comparison.gvp
de0nano-interface/: README.md
de0nano-interface/gateware/: COPYING  altnco_nativelink.tcl  control_description.txt  de0-nano-sof2jic.cof  demo_txcw.qsf  demo_txcw.sdc  fifo.bsf  fifo.cmp  fifo.qip  fifo.vhd  mrf_testing.qpf  pll01.bsf  pll01.cmp  pll01.ppf  pll01.qip  pll01.vhd  rx_acq.bdf  txd_fifo.bsf  txd_fifo.cmp  txd_fifo.qip  txd_fifo.vhd  txd_fifo_inst.vhd
de0nano-interface/hardware/: COPYING
design/: diagrams.vsd  notes.txt  rasdr-cd-labels.doc  rasdr-labels.doc  tables.xlsx
design/case/: Makefile  README.md  boarddescription.h  casefactory.cpp  casefactory.h  geom.h  main.cpp  posts.h  rasdr2-case-bottom.scad  rasdr2-case-mfg.scad  rasdr2-case-mfg.stl  rasdr2-case-top.scad  rasdr2.h
design/protocase/: 1827596.pdc  GS-111-0000.pdc  MountingScrewCutout.pdc  RR-MSBFPM-06GR.pdc  VentSlot.pdc  case.pda
docs/: noise-source.txt  rasdr2-spur-observations.xlsx
host/: README.md
host/CyControl/: README.md
host/RASDRproc/: README.txt  make.bat  relnotes.txt
host/RASDRstreamer/: .gitignore  AssemblyInfo.cpp  RASDRstreamer.cpp  RASDRstreamer.h  RASDRstreamer.sln  RASDRstreamer.vcproj  RASDRstreamer.vcxproj  ReadMe.txt  make.bat
host/RASDRviewer/: README.txt  make.bat
host/fftw-calc/: README.md  README.txt
host/fftw-calc/src/: CMakeLists.txt  cpuid.c  cpuid.h  fftw-calc.c
host/fx3load/: readme.txt
host/plotcsv/: FFTOut-2msps-500avg-srh77ca.csv  FFTOut-datetime.csv  FFTOut-example.csv  FFTOut-format-1.0.4-universaltime.csv  FFTOut-format-1.2.2-background.csv  FFTout-format-1.1.1-localtime.csv  FFTout-format-1.1.1-universaltime.csv  FFTout-format-1.2.2-localtime.csv  FFTout-format-1.2.2-universaltime.csv  environment.yml  go.bat  make.bat  plotcsv.py  plotcsvw.py  readme.txt  setup.py  test.bat  test.sh
host/raw2iq/: Makefile  README.md  README.txt  make.bat
host/raw2iq/src/: CMakeLists.txt  raw2iq.c
host/rss-spectrogram/: rss-tester.py  rss.py
host/rss2rtl-power/: LogMixIn.py  extended-black-body-0128.csv  make.bat  readme-spectrogram.txt  readme.txt  rss-power.py  rss2rtl-power.py  rss2rtlpower.py  setup.py  smoothe-cool-warm-table-byte-0256.csv  spectrogram.py
host/socket/: README.md  readme.txt
host/socket/src/: CMakeLists.txt  client.c  server.c  socket.h  strlcpy.c
manufacture/: README.md  rasdr2-bom-and-components.xlsx
manufacture/DigiRED_v1r1/: DigiRED_v1-01-Front_Cu.gtl  DigiRED_v1-02-GND_Cu.gbr  DigiRED_v1-03-Signal_1_Cu.gbr  DigiRED_v1-04-Signal_2_Cu.gbr  DigiRED_v1-05-Power_Cu.gbr  DigiRED_v1-06-Back_Cu.gbl  DigiRED_v1-B_Mask.gbs  DigiRED_v1-B_Paste.gbp  DigiRED_v1-B_SilkS.gbo  DigiRED_v1-Edge_Cuts.gbr  DigiRED_v1-F_Mask.gts  DigiRED_v1-F_Paste.gtp  DigiRED_v1-F_SilkS.gto  DigiRED_v1-all_pos.txt  DigiRED_v1-drl_map.pho  DigiRED_v1.drl  DigiRED_v1_BOM.xls  ReadMe.txt
manufacture/MyriadRF_v1r3e1/: MYRIAD_RF-01-Front.gtl  MYRIAD_RF-02-Inner_GND.gbr  MYRIAD_RF-03-Inner_Analog_Signal.gbr  MYRIAD_RF-04-Inner_Power.gbr  MYRIAD_RF-05-Inner_Digital_Signal.gbr  MYRIAD_RF-06-Back.gbl  MYRIAD_RF-B_Mask.gbs  MYRIAD_RF-B_Paste.gbp  MYRIAD_RF-B_SilkS.gbo  MYRIAD_RF-Dwgs_User.gbr  MYRIAD_RF-Edge_Cuts.gbr  MYRIAD_RF-F_Mask.gts  MYRIAD_RF-F_Paste.gtp  MYRIAD_RF-F_SilkS.gto  MYRIAD_RF-drl_map.pho  (+3 more)
patches/: index.html  md5sum.txt
release/: 0.1.2.html  1.2.1.html  1.2.2.html  1.2.3.html  1.2.4.html
rfmodule/: COPYING
(+743 files in other folders)
